# url-shortener

./: .env.test  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  setup.sh  sqlx-data.json  todo.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.githooks/: pre-commit
migrations/: 20240214_create_urls_table.sql
src/: config.rs  error.rs  main.rs  models.rs
src/api/: api_docs.rs  handlers.rs  middleware.rs  mod.rs  routes.rs
src/application/: mod.rs  url_service.rs
src/domain/: mod.rs  url.rs
src/infrastructure/: cache.rs  database.rs  migrations.rs  mod.rs
tests/: README.md  basic_test.rs  helpers.rs  integration_test.rs  port_finder.rs
