[package]
name = "tommy-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
redis = { version = "0.29.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nanoid = "0.4"
dotenv = "0.15"
thiserror = "2.0.11"
anyhow = "1.0"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
