[package]
name = "tommy-shortener"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["tommcamm"]
repository = "https://github.com/tommcamm/url-shortener"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.44", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "time", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "uuid",
    "bigdecimal",
] }
redis = { version = "0.29.1", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nanoid = "0.4"
dotenv = "0.15"
thiserror = "2.0.12"
anyhow = "1.0.97"
time = { version = "0.3.39", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
rand = "0.9.0"

[dev-dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
testcontainers = "0.23.3"
tokio = { version = "1.44", features = ["full", "test-util", "macros"] }
tokio-test = "0.4"
wiremock = "0.6.3"
assert_matches = "1.5"
fake = { version = "4.0.0", features = ["derive"] }
test-log = { version = "0.2", features = ["trace"] }
once_cell = "1.21.1"
